# okey

./: Cargo.toml  README.md
examples/pro_micro/: Cargo.toml  Justfile  README.md
examples/pro_micro/.cargo/: config.toml
examples/pro_micro/src/: main.rs  nrf52840.rs  rp2040.rs
examples/rp/: Cargo.toml
examples/rp/.cargo/: config.toml
examples/rp/src/: main.rs
examples/rp2040/.cargo/: config.toml
examples/rp2040/src/: main.rs
examples/rp_split/: Cargo.toml
foo/: Cargo.toml
foo/examples/rp/src/: main.rs
foo/src/: lib.rs
foo/src/kb/: builder.rs  layers.rs  mod copy.rs  mod.rs
foo/src/usb/: action.rs  mod.rs  report.rs
src/: action.rs  action_map.rs  codes.rs  config.rs  event.rs  keycode.rs  lib.rs  macros.rs  prelude.rs  report.rs
src/action/: key.rs  mod.rs  modifier.rs
src/interface/: mod.rs
src/interface/usb/: code.rs  config.rs  handlers.rs  key_codes.rs  mod.rs  qmk_key_codes.rs  report.rs  state.rs
src/map/: layered.rs  mod.rs
src/scan/: col2row.rs  direct.rs  matrix.rs  mod.rs  row2col.rs
src/scan/debounce/: counter.rs  mod.rs  simple.rs
src/scan/split/: i2c.rs  mod.rs
src/usb/: buffers.rs  code.rs  config.rs  mod.rs  report.rs  state.rs
