[package]
name = "okey"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
embassy-executor = "0.7.0"
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
embassy-usb = "0.4.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]