[package]
name = "okey"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = "0.9.1"
embassy-futures = "0.1.1"
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

critical-section = "1.2.0"

static_cell = "2.1.1"
portable-atomic = { version = "1.0", features = ["critical-section"] }

bitflags = "2.10.0"

defmt = { version = "1.0.1" }

[features]
defmt = ["embassy-usb/defmt"]
