[package]
name = "okey"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["executor-thread", "executor-interrupt"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.4.0", features = ["rp2040"] }
embassy-time = "0.4.0"
embassy-usb = "0.4.0"

embedded-hal = "1.0.0"
