[package]
name = "rp"
version = "0.1.0"
edition = "2021"

[dependencies]
okey = { path = "../../" }

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-rp = { version = "0.8.0", features = [
    "rp2040",
    "critical-section-impl",
    "time-driver",
] }
cortex-m-rt = "0.7"
panic-probe = "1.0.0"

defmt = "1.0.1"
defmt-rtt = "1.0.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
